pulled in some ibid stuff

--- a/references.bib
+++ b/references.bib
@@ -488,6 +488,17 @@
   year = {1963}
 }
 
+=== From http://research.microsoft.com ===
+@inproceedings{goldberg2005spexternalmemory,
+   author = {A. V. Goldberg and R. Werneck},
+   title = {Computing Point-to-Point Shortest Paths from External
+      Memory},
+   booktitle = {SIAM Workshop on Algorithms Engineering and Experimentation (ALENEX '05)},
+   year = {2005},
+   address = {Vancouver, Canada},
+   url = {http://research.microsoft.com/apps/pubs/default.aspx?id=64510},
+}
+
 === Manual ===
 @inproceedings{goldenberg2013epeastar,
    author = {Meir Goldenberg and Ariel Felner and Nathan Sturtevant and
@@ -651,6 +662,21 @@
    URL = {http://ijr.sagepub.com/content/21/3/233.abstract}, 
    eprint = {http://ijr.sagepub.com/content/21/3/233.full.pdf+html}, 
    journal = {The International Journal of Robotics Research} 
+}
+
+=== From IEEE Xplore ===
+@inproceedings{ikeda1994betterroutes,
+   author = {Ikeda, T. and Min-Yao Hsu and Imai, Hiroshi
+      and Nishimura, S. and Shimoura, H. and Hashimoto, T.
+      and Tenmoku, K. and Mitoh, K.},
+   title = {A fast algorithm for finding better routes by
+      {AI} search techniques},
+   booktitle = {Vehicle Navigation and Information Systems Conference,
+      1994. Proceedings., 1994},
+   year = {1994},
+   pages = {291-296},
+   doi = {10.1109/VNIS.1994.396824},
+   month = aug,
 }
 
 === From IEEE Xplore ===
@@ -1106,6 +1132,22 @@
    volume = {4},
    pages = {843-849},
    doi = {10.1109/ROBOT.1987.1087847}
+}
+
+=== From Springer website (number=issue) ===
+﻿@article{luby1989bidijk,
+   author = {Luby, Michael and Ragde, Prabhakar},
+   title = {A bidirectional shortest-path algorithm with good
+      average-case behavior},
+   journal = {Algorithmica},
+   year = {1989},
+   month = jun,
+   volume = {4},
+   number = {1},
+   pages = {551--567},
+   issn = {1432-0541},
+   doi = {10.1007/BF01553908},
+   url = {http://dx.doi.org/10.1007/BF01553908},
 }
 
 === From http://ias.in.tum.de/people/beetz?key=mueller07transformational ===
