--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,5 @@
+@string{icra = "{IEEE} International Conference on Robotics and Automation"}
+@string{rss = "Proceedings of Robotics: Science and Systems"}
 
 === From IEEE Xplore ===
 @inproceedings{aghamohammadi2011feedbackroadmaps,
@@ -15,13 +17,12 @@
 }
 
 === From IEEE Xplore ===
-@inproceedings{aghamohammadi2011probcompleteness, 
+@inproceedings{aghamohammadi2011probcompleteness,
    author = {Agha-mohammadi, Ali-akbar and Chakravorty, Suman and
       Amato, Nancy M.},
-   title = {On the probabilistic completeness of the sampling-based feedback
-      motion planners in belief space},
-   booktitle = {Robotics and Automation (ICRA), 2012 IEEE International
-      Conference on},
+   title = {On the probabilistic completeness of the sampling-based
+      feedback motion planners in belief space},
+   booktitle = icra,
    year = {2012},
    month = may,
    pages = {3983-3990},
@@ -33,15 +34,16 @@
 @inproceedings{alami1994planalgs,
    author = {R. Alami and J.P. Laumond and T. Sim\'{e}on},
    title = {Two manipulation planning algorithms},
-   booktitle = {Workshop on Algorithmic Foundations of Robotics (WAFR 1994)},
+   booktitle = {Workshop on Algorithmic Foundations of Robotics
+      (WAFR 1994)},
    year = {1994},
 }
 
 === From http://www.roboticsproceedings.org/rss03/p30.html ===
 @inproceedings{alterovitz2007stochasticroadmap,
    author = {R. Alterovitz and T. Simeon and K. Goldberg},
-   title = {The Stochastic Motion Roadmap: A Sampling Framework for Planning
-      with Markov Motion Uncertainty},
+   title = {The Stochastic Motion Roadmap: A Sampling Framework for
+      Planning with Markov Motion Uncertainty},
    booktitle = {Proceedings of Robotics: Science and Systems},
    year = {2007},
    month = jun,
@@ -50,9 +52,10 @@
 
 === From IEEE Xplore ===
 @inproceedings{bagnell2012arms,
-   author = {Bagnell, J.A. and Cavalcanti, F. and Lei Cui and Galluzzo, T.
-      and Hebert, M. and Kazemi, M. and Klingensmith, M. and Libby, J.
-      and Tian Yu Liu and Pollard, N. and Pivtoraiko, M. and Valois, J.-S.
+   author = {Bagnell, J.A. and Cavalcanti, F. and Lei Cui
+      and Galluzzo, T. and Hebert, M. and Kazemi, M.
+      and Klingensmith, M. and Libby, J. and Tian Yu Liu
+      and Pollard, N. and Pivtoraiko, M. and Valois, J.-S.
       and Zhu, R.},
    booktitle = {Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ
       International Conference on},
@@ -91,8 +94,7 @@
    author = {Dmitry Berenson and Siddhartha Srinivasa and
              David Ferguson and James Kuffner},
    title = {Manipulation planning on constraint manifolds},
-   booktitle = {Robotics and Automation (ICRA),
-                2011 IEEE International Conference on},
+   booktitle = icra,
    year = {2009},
    month = may,
 }
@@ -109,8 +111,10 @@
 
 === From sagepub (IJRR) ===
 @article{berenson2011tsrs,
-   author = {Berenson, Dmitry and Srinivasa, Siddhartha and Kuffner, James},
-   title = {Task Space Regions: A Framework for Pose-Constrained Manipulation Planning},
+   author = {Berenson, Dmitry and Srinivasa, Siddhartha
+      and Kuffner, James},
+   title = {Task Space Regions: A Framework for Pose-Constrained
+      Manipulation Planning},
    journal = {The International Journal of Robotics Research},
    volume = {30},
    number = {12},
@@ -132,9 +136,11 @@
 
 === From IEEE Xplore ===
 @article{bettini2004fixtures,
-   author = {Bettini, A. and Marayong, P. and Lang, S. and Okamura, A.M. and Hager, G.D.},
+   author = {Bettini, A. and Marayong, P. and Lang, S.
+      and Okamura, A.M. and Hager, G.D.},
    journal = {Robotics, IEEE Transactions on},
-   title = {Vision-assisted control for manipulation using virtual fixtures},
+   title = {Vision-assisted control for manipulation using virtual
+      fixtures},
    year = {2004},
    month =  dec,
    volume = {20},
@@ -147,8 +153,7 @@
 === From IEEE Xplore ===
 @inproceedings{bhatia2010temporalgoals,
    author = {Bhatia, A and Kavraki, L.E. and Vardi, M.Y.},
-   booktitle = {Robotics and Automation (ICRA),
-      2010 IEEE International Conference on},
+   booktitle = icra,
    title = {Sampling-based motion planning with temporal goals},
    year = {2010},
    month = may,
@@ -158,25 +163,25 @@
 }
 
 === From IEEE Xplore ===
-@article{bhatia2011complexgoals, 
-   author = {Bhatia, A. and Maly, M.R. and Kavraki, L.E. and Vardi, M.Y.},
+@article{bhatia2011complexgoals,
+   author = {Bhatia, A. and Maly, M.R. and Kavraki, L.E.
+      and Vardi, M.Y.},
    journal = {Robotics Automation Magazine, IEEE},
-   title = {Motion Planning with Complex Goals}, 
+   title = {Motion Planning with Complex Goals},
    year = {2011},
-   month = sep, 
-   volume = {18}, 
-   number = {3}, 
-   pages = {55-64}, 
-   doi = {10.1109/MRA.2011.942115}, 
+   month = sep,
+   volume = {18},
+   number = {3},
+   pages = {55-64},
+   doi = {10.1109/MRA.2011.942115},
    issn = {1070-9932},
 }
 
 === From IEEE Xplore ===
 @inproceedings{bohlin2000lazyprm,
    author = {Bohlin, R. and Kavraki, E.E.},
-   booktitle = {Robotics and Automation, 2000. Proceedings. ICRA '00.
-      IEEE International Conference on},
    title = {Path planning using {L}azy {PRM}},
+   booktitle = icra,
    year = {2000},
    volume = {1},
    pages = {521-528 vol.1},
@@ -187,8 +192,8 @@
 === From sagepub (IJRR) ===
 @article{cambon2009hybrid,
    author = {Cambon, St\'{e}phane and Alami, Racid and Gravot, Fabien},
-   title = {A hybrid approach to intricate motion, manipulation and task
-            planning},
+   title = {A hybrid approach to intricate motion, manipulation and
+      task planning},
    journal = {The International Journal of Robotics Research},
    volume = {28},
    number = {1},
@@ -200,9 +205,10 @@
 
 === From RI website ===
 @inproceedings{chang2010pregrasp,
-   author = {Lillian Y. Chang and Siddhartha Srinivasa and Nancy Pollard},
+   author = {Lillian Y. Chang and Siddhartha Srinivasa
+      and Nancy Pollard},
    title = {Planning pre-grasp manipulation for transport tasks},
-   booktitle = {Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)},
+   booktitle = icra,
    month = may,
    year = {2010},
 }
@@ -287,10 +293,9 @@
 }
 
 === Manual (for now) ===
-@inproceedings{dellin2015cmr, 
+@inproceedings{dellin2015cmr,
    author = {Dellin, Christopher M. and Srinivasa, Siddhartha S.},
-   booktitle = {Robotics and Automation (ICRA), 2015 IEEE International
-      Conference on},
+   booktitle = icra,
    title = {A General Technique for Fast Comprehensive
       Multi-Root Planning on Graphs by Coloring Vertices and
       Deferring Edges},
@@ -315,7 +320,7 @@
    booktitle = {Robotics: Science and Systems},
    month = jun,
    year = {2008},
-} 
+}
 
 === From openrave.org ===
 @phdthesis{diankov2010openrave,
@@ -366,10 +371,9 @@
 }
 
 === From IEEE Xplore ===
-@inproceedings{dragan2011goalsets, 
+@inproceedings{dragan2011goalsets,
    author = {Dragan, A.D. and Ratliff, N.D. and Srinivasa, S.S.},
-   booktitle = {Robotics and Automation (ICRA), 2011 IEEE International
-      Conference on},
+   booktitle = icra,
    title = {Manipulation planning with goal sets using constrained
       trajectory optimization},
    year = {2011},
@@ -393,7 +397,7 @@
 }
 
 === From IEEE Xplore ===
-@inproceedings{erdmann1986multiplemoving, 
+@inproceedings{erdmann1986multiplemoving,
    author = {Erdmann, M. and Lozano-Perez, T.},
    title = {On multiple moving objects},
    booktitle = {Robotics and Automation. Proceedings. 1986 IEEE International
@@ -401,18 +405,18 @@
    year = {1986},
    month = apr,
    volume = {3},
-   number = {},
    pages = {1419 - 1424},
    doi = {10.1109/ROBOT.1986.1087401},
 }
 
-=== From http://uai.sis.pitt.edu/displayArticleDetails.jsp?mmnu=2&smnu=2&article_id=2100 ===
+=== From http://uai.sis.pitt.edu/displayArticleDetails.jsp ===
+=== mmnu=2&smnu=2&article_id=2100 ===
 @inproceedings{erez2010scalablepomdp,
    author = {Tom Erez and William Smart},
-   title = {A Scalable Method for Solving High-Dimensional Continuous POMDPs
-      Using Local Approximation},
-   booktitle = {Proceedings of the Twenty-Sixth Conference Annual Conference
-      on Uncertainty in Artificial Intelligence (UAI-10)},
+   title = {A Scalable Method for Solving High-Dimensional Continuous
+      POMDPs Using Local Approximation},
+   booktitle = {Proceedings of the Twenty-Sixth Conference Annual
+      Conference on Uncertainty in Artificial Intelligence (UAI-10)},
    publisher = {AUAI Press},
    address = {Corvallis, Oregon},
    year = {2010},
@@ -433,7 +437,8 @@
 @techreport{ferbach1993penalty,
    author = {Pierre Ferbach and J{\'e}r{\^o}me Barraquand},
    title = {A penalty function method for constrained motion planning},
-   institution = {Digital Equipment Corporation Paris Research Laboratory},
+   institution = {Digital Equipment Corporation Paris Research
+      Laboratory},
    year = {1993},
    month = sep,
    url = {http://www.hpl.hp.com/techreports/Compaq-DEC/PRL-RR-34.pdf},
@@ -442,8 +447,7 @@
 === From IEEE Xplore ===
 @inproceedings{ferguson2006drrt,
    author = {Ferguson, Dave and Kalra, N. and Stentz, A.},
-   booktitle = {Robotics and Automation, 2006. ICRA 2006.
-      Proceedings 2006 IEEE International Conference on},
+   booktitle = icra,
    title = {Replanning with RRTs},
    year = {2006},
    month = may,
@@ -454,15 +458,15 @@
 
 === From http://www.sciencedirect.com ===
 @article{fikes1971strips,
-  author = {Richard E. Fikes and Nils J. Nilsson},
-  title = {Strips: A new approach to the application of theorem proving to
-           problem solving},
-  journal = {Artificial Intelligence},
-  volume = {2},
-  number = {3-4},
-  year = {1971},
-  pages = {189-208},
-  doi = {10.1016/0004-3702(71)90010-5},
+   author = {Richard E. Fikes and Nils J. Nilsson},
+   title = {Strips: A new approach to the application of theorem
+      proving to problem solving},
+   journal = {Artificial Intelligence},
+   volume = {2},
+   number = {3-4},
+   year = {1971},
+   pages = {189-208},
+   doi = {10.1016/0004-3702(71)90010-5},
 }
 
 === From rand.org ===
@@ -493,8 +497,7 @@
    title = {Batch Informed Trees ({BIT*}): Sampling-based Optimal
       Planning via the Heuristically Guided Search of Implicit
       Random Geometric Graphs},
-   booktitle = {Robotics and Automation (ICRA), 2015 IEEE International
-      Conference on},
+   booktitle = icra,
    year = {2015},
    month = may
 }
@@ -550,7 +553,8 @@
    author = {A. V. Goldberg and R. Werneck},
    title = {Computing Point-to-Point Shortest Paths from External
       Memory},
-   booktitle = {SIAM Workshop on Algorithms Engineering and Experimentation (ALENEX '05)},
+   booktitle = {SIAM Workshop on Algorithms Engineering and
+      Experimentation (ALENEX '05)},
    year = {2005},
    address = {Vancouver, Canada},
    url = {http://research.microsoft.com/apps/pubs/default.aspx?id=64510},
@@ -573,7 +577,8 @@
       Geometric Problems},
    year = {2005},
    isbn = {978-3-540-23214-8},
-   booktitle = {Robotics Research. The Eleventh International Symposium},
+   booktitle = {Robotics Research. The Eleventh International
+      Symposium},
    volume = {15},
    series = {Springer Tracts in Advanced Robotics},
    editor = {Dario, Paolo and Chatila, Raja},
@@ -588,7 +593,8 @@
 @article{hart1968astar,
    author = {Hart, P.E. and Nilsson, N.J. and Raphael, B.},
    journal = {Systems Science and Cybernetics, IEEE Transactions on},
-   title = {A Formal Basis for the Heuristic Determination of Minimum Cost Paths},
+   title = {A Formal Basis for the Heuristic Determination of Minimum
+      Cost Paths},
    year = {1968},
    month = jul,
    volume = {4},
@@ -615,8 +621,7 @@
 === From IEEE Xplore ===
 @inproceedings{hauser2010smoothing,
    author = {Hauser, K. and Ng-Thow-Hing, V.},
-   booktitle = {Robotics and Automation (ICRA),
-      2010 IEEE International Conference on},
+   booktitle = icra,
    title = {Fast smoothing of manipulator trajectories using optimal
       bounded-acceleration shortcuts},
    year = {2010},
@@ -641,14 +646,15 @@
    eprint = {http://ijr.sagepub.com/content/30/6/678.full.pdf+html},
 }
 
-=== Manual, from Hauser's website: https://www.cs.indiana.edu/~hauserk/ ===
+=== Manual, from Hauser's website: ===
+=== https://www.cs.indiana.edu/~hauserk/ ===
 @inproceedings{hauser2012mcr,
-   author = {Hauser, K.}, 
+   author = {Hauser, K.},
    title = {The minimum constraint removal problem with three robotics
             applications},
    booktitle = {Workshop on the Algorithmic Foundations of Robotics},
    year = {2012},
-   month = jun, 
+   month = jun,
 }
 
 === Manual, from http://mobilemanipulation.org/rss2012/index.php/Schedule ===
@@ -685,16 +691,18 @@
 
 === From sagepub (IJRR) ===
 @article{hsu2002moveobj,
-   author = {David Hsu and Robert Kindel and Jean-Claude Latombe and Stephen Rock}, 
-   title = {Randomized Kinodynamic Motion Planning with Moving Obstacles},
-   volume = {21}, 
-   number = {3}, 
-   pages = {233-255}, 
-   year = {2002}, 
-   doi = {10.1177/027836402320556421}, 
-   url = {http://ijr.sagepub.com/content/21/3/233.abstract}, 
-   eprint = {http://ijr.sagepub.com/content/21/3/233.full.pdf+html}, 
-   journal = {The International Journal of Robotics Research} 
+   author = {David Hsu and Robert Kindel and Jean-Claude Latombe
+      and Stephen Rock},
+   title = {Randomized Kinodynamic Motion Planning with Moving
+      Obstacles},
+   volume = {21},
+   number = {3},
+   pages = {233-255},
+   year = {2002},
+   doi = {10.1177/027836402320556421},
+   url = {http://ijr.sagepub.com/content/21/3/233.abstract},
+   eprint = {http://ijr.sagepub.com/content/21/3/233.full.pdf+html},
+   journal = {The International Journal of Robotics Research}
 }
 
 === From IEEE Xplore ===
@@ -729,7 +737,8 @@
 === Manual, from http://nano-d.inrialpes.fr/leonard-jaillet/ ===
 @inproceedings{jaillet2011atlas,
    author = {L\'{e}onard Jaillet and Josep M. Porta},
-   title = {Path planning with loop closure constraints using an atlas-based {RRT}},
+   title = {Path planning with loop closure constraints using an
+      atlas-based {RRT}},
    booktitle = {International Symposium on Robotics Research},
    year = {2011},
 }
@@ -738,10 +747,7 @@
 @inproceedings{kaelbling2011inthenow,
    author = {Kaelbling, Leslie Pack and Lozano-P\'{e}rez, Tom\'{a}s},
    title = {Hierarchical Task and Motion Planning in the Now},
-   booktitle = {Robotics and Automation (ICRA),
-                2011 IEEE International Conference on},
-   volume = {},
-   number = {},
+   booktitle = icra,
    pages = {1470-1477},
    year = {2011},
    month = may,
@@ -766,9 +772,8 @@
 === From IEEE Xplore ===
 @inproceedings{kallman2004dynamicroadmaps,
    author = {Kallman, M. and Mataric, M.},
-   booktitle = {Robotics and Automation, 2004. Proceedings.
-      ICRA '04. 2004 IEEE International Conference on},
    title = {Motion planning using dynamic roadmaps},
+   booktitle = icra,
    year = {2004},
    month = apr,
    volume = {5},
@@ -803,11 +808,11 @@
 }
 
 === From IEEE Xplore ===
-@article{kavrakietal1996prm, 
+@article{kavrakietal1996prm,
    author = {Kavraki, L.E. and Svestka, P. and Latombe, J.-C. and
       Overmars, M.H.},
-   title = {Probabilistic roadmaps for path planning in high-dimensional
-      configuration spaces},
+   title = {Probabilistic roadmaps for path planning in
+      high-dimensional configuration spaces},
    journal = {Robotics and Automation, IEEE Transactions on},
    year = {1996},
    month = aug,
@@ -836,7 +841,8 @@
    author = {Khatib, O.},
    booktitle = {Robotics and Automation. Proceedings.
       1985 IEEE International Conference on},
-   title = {Real-time obstacle avoidance for manipulators and mobile robots},
+   title = {Real-time obstacle avoidance for manipulators and mobile
+      robots},
    year = {1985},
    month = mar,
    volume = {2},
@@ -876,7 +882,8 @@
 
 === From http://cs.stanford.edu/people/tkr/research/robot-programming ===
 @incollection{kroeger2010manipprimitives,
-   author = {Torsten Kr{\"o}ger and Bernd Finkemeyer and Friedrich M. Wahl},
+   author = {Torsten Kr{\"o}ger and Bernd Finkemeyer
+      and Friedrich M. Wahl},
    title = {Manipulation primitives -- a universal interface between
       sensor-based motion control and robot programming},
    booktitle = {Robot Systems for Handling and Assembly},
@@ -894,9 +901,9 @@
 @inproceedings{kron2004eod,
    author = {Kron, A. and Schmidt, G. and Petzold, B. and Zah, M.I.
       and Hinterseer, P. and Steinbach, E.},
-   booktitle = {Robotics and Automation, 2004. Proceedings. ICRA '04.
-      2004 IEEE International Conference on},
-   title = {Disposal of explosive ordnances by use of a bimanual haptic telepresence system},
+   title = {Disposal of explosive ordnances by use of a bimanual
+      haptic telepresence system},
+   booktitle = icra,
    year = {2004},
    month = apr,
    volume = {2},
@@ -908,11 +915,12 @@
 === From IEEE Xplore ===
 @inproceedings{kuffner2000rrtconnect,
    author = {James J. Kuffner and Steven M. LaValle},
-   booktitle = {Robotics and Automation, 2000. Proceedings. ICRA '00. IEEE International Conference on},
-   title = {{RRT-Connect}: An efficient approach to single-query path planning},
+   booktitle = icra,
+   title = {{RRT-Connect}: An efficient approach to single-query
+      path planning},
    year = {2000},
    volume = {2},
-   pages = {995-1001 vol.2},
+   pages = {995-1001},
    doi = {10.1109/ROBOT.2000.844730},
    issn = {1050-4729},
 }
@@ -951,7 +959,8 @@
 === From http://citeseerx.ist.psu.edu/ ===
 @article{laumond2000visibilityprms,
    author = {J-p. Laumond and C. Nissoux},
-   title = {Visibility-based probabilistic roadmaps for motion planning},
+   title = {Visibility-based probabilistic roadmaps for motion
+      planning},
    journal = {Journal of Advanced Robotics},
    year = {2000},
    volume = {14},
@@ -961,7 +970,8 @@
 === Manual ===
 @techreport{lavalle1998rrt,
    author = {Steven M. LaValle},
-   title = {Rapidly-exploring random trees: A new tool for path planning},
+   title = {Rapidly-exploring random trees: A new tool for path
+      planning},
    institution = {Computer Science Dept., Iowa State University},
    year = {1998},
    month = oct,
@@ -973,7 +983,8 @@
 @inproceedings{lavalle2000rrts,
    author = {Steven M. LaValle and James J. Kuffner},
    title = {Rapidly-Exploring Random Trees: Progress and Prospects},
-   booktitle = {Workshop on the Algorithmic Foundations of Robotics. Proceedings.},
+   booktitle = {Workshop on the Algorithmic Foundations of Robotics.
+      Proceedings.},
    year = {2000},
 }
 
@@ -990,7 +1001,7 @@
 === From sagepub (IJRR) ===
 @article{lavalle2004deterministic,
    author = {LaValle, Steven M. and Branicky, Michael S.
-      and Lindemann, Stephen R.}, 
+      and Lindemann, Stephen R.},
    title = {On the Relationship between Classical Grid Search
       and Probabilistic Roadmaps},
    volume = {23},
@@ -1015,7 +1026,7 @@
 }
 
 === From IEEE Xplore ===
-@inproceedings{lavallekuffner1999rrt, 
+@inproceedings{lavallekuffner1999rrt,
    author = {Steven M. LaValle and James J. Kuffner},
    title = {Randomized kinodynamic planning},
    booktitle = {Robotics and Automation, 1999. Proceedings.
@@ -1029,8 +1040,8 @@
 
 === From IEEE Xplore ===
 @inproceedings{leeper2012hitl,
-   author = {Leeper, A. and Hsiao, K. and Ciocarlie, M. and Takayama, Leila
-      and Gossow, D.},
+   author = {Leeper, A. and Hsiao, K. and Ciocarlie, M.
+      and Takayama, Leila and Gossow, D.},
    booktitle = {Human-Robot Interaction (HRI), 2012 7th ACM/IEEE
       InternationalConference on},
    titl = {Strategies for human-in-the-loop robotic grasping},
@@ -1051,17 +1062,17 @@
 
 === From sagepub (IJRR) ===
 @article{leven2002changing,
-   author = {Leven, Peter and Hutchinson, Seth}, 
+   author = {Leven, Peter and Hutchinson, Seth},
    title = {A Framework for Real-time Path Planning in Changing
       Environments},
-   volume = {21}, 
-   number = {12}, 
-   pages = {999-1030}, 
-   year = {2002}, 
-   doi = {10.1177/0278364902021012001},  
-   url = {http://ijr.sagepub.com/content/21/12/999.abstract}, 
-   eprint = {http://ijr.sagepub.com/content/21/12/999.full.pdf+html}, 
-   journal = {The International Journal of Robotics Research} 
+   volume = {21},
+   number = {12},
+   pages = {999-1030},
+   year = {2002},
+   doi = {10.1177/0278364902021012001}, 
+   url = {http://ijr.sagepub.com/content/21/12/999.abstract},
+   eprint = {http://ijr.sagepub.com/content/21/12/999.full.pdf+html},
+   journal = {The International Journal of Robotics Research}
 }
 
 === Manual ===
@@ -1080,8 +1091,7 @@
 === From IEEE Xplore ===
 @inproceedings{li2002incrementalprmmanagement,
    author = {Tsai-Yen Li and Yang-Chuan Shie},
-   booktitle = {Robotics and Automation, 2002. Proceedings. ICRA '02.
-      IEEE International Conference on},
+   booktitle = icra,
    title = {An incremental learning approach to motion planning with
       roadmap management},
    year = {2002},
@@ -1101,14 +1111,14 @@
 }
 
 === From IEEE Xplore ===
-@article{lozanoperez1983cspace, 
+@article{lozanoperez1983cspace,
    author = {Lozano-P{\'e}rez, Tom\'{a}s},
    title = {Spatial Planning: A Configuration Space Approach},
    journal = {Computers, IEEE Transactions on},
-   year = {1983}, 
-   month = feb, 
-   volume = {C-32}, 
-   number = {2}, 
+   year = {1983},
+   month = feb,
+   volume = {C-32},
+   number = {2},
    pages = {108--120},
    doi = {10.1109/TC.1983.1676196},
    issn = {0018-9340},
@@ -1182,8 +1192,8 @@
 @inproceedings{mueller2007transformational,
    author = {Armin M{\"u}ller and Alexandra Kirsch and Michael Beetz},
    title = {Transformational Planning for Everyday Activity},
-   booktitle = {Proceedings of the 17th International Conference on Automated
-      Planning and Scheduling (ICAPS'07)},
+   booktitle = {Proceedings of the 17th International Conference on
+      Automated Planning and Scheduling (ICAPS'07)},
    year = {2007},
    month = sep,
    address = {Providence, USA},
@@ -1192,16 +1202,16 @@
 
 === From sagepub (IJRR) ===
 @article{newmanbranicky1991cspacetransforms,
-   author = {Newman, Wyatt S. and Branicky, Michael S.}, 
+   author = {Newman, Wyatt S. and Branicky, Michael S.},
    title = {Real-Time Configuration Space Transforms for
       Obstacle Avoidance},
-   volume = {10}, 
-   number = {6}, 
-   pages = {650-667}, 
-   year = {1991}, 
+   volume = {10},
+   number = {6},
+   pages = {650-667},
+   year = {1991},
    doi = {10.1177/027836499101000605},
-   url = {http://ijr.sagepub.com/content/10/6/650.abstract}, 
-   eprint = {http://ijr.sagepub.com/content/10/6/650.full.pdf+html}, 
+   url = {http://ijr.sagepub.com/content/10/6/650.abstract},
+   eprint = {http://ijr.sagepub.com/content/10/6/650.full.pdf+html},
    journal = {The International Journal of Robotics Research},
 }
 
@@ -1211,11 +1221,11 @@
    title = {Finding the Shortest Route between Two Points in a
       Network},
    journal = {The Computer Journal},
-   volume = {9}, 
-   number = {3}, 
-   pages = {275-280}, 
-   year = {1966}, 
-   doi = {10.1093/comjnl/9.3.275}, 
+   volume = {9},
+   number = {3},
+   pages = {275-280},
+   year = {1966},
+   doi = {10.1093/comjnl/9.3.275},
    url = {http://comjnl.oxfordjournals.org/content/9/3/275.abstract},
 }
 
@@ -1232,7 +1242,8 @@
 @inproceedings{park2001surgery,
    author = {Park, Shinsuk and Howe, Robert D. and Torchiana, David F.},
    title = {Virtual Fixtures for Robotic Cardiac Surgery},
-   booktitle = {Proceedings of the 4th International Conference on Medical Image Computing and Computer-Assisted Intervention},
+   booktitle = {Proceedings of the 4th International Conference on
+      Medical Image Computing and Computer-Assisted Intervention},
    series = {MICCAI '01},
    year = {2001},
    isbn = {3-540-42697-3},
@@ -1247,7 +1258,7 @@
 === From IEEE Xplore ===
 @article{pearl1982semiadmissible,
    author = {Pearl, J. and Kim, Jin H.},
-   journal = {Pattern Analysis and Machine Intelligence, 
+   journal = {Pattern Analysis and Machine Intelligence,
       IEEE Transactions on},
    title = {Studies in Semi-Admissible Heuristics},
    year = {1982},
@@ -1270,9 +1281,10 @@
 
 === From IEEE Xplore ===
 @inproceedings{phillips2013anytimeegraphs,
-   author = {Phillips, M. and Dornbush, A. and Chitta, S. and Likhachev, M.},
+   author = {Phillips, M. and Dornbush, A. and Chitta, S.
+      and Likhachev, M.},
    title = {Anytime incremental planning with E-Graphs},
-   booktitle = {Robotics and Automation (ICRA), 2013 IEEE International Conference on},
+   booktitle = icra,
    year = {2013},
    month = may,
    pages = {2444-2451},
@@ -1283,16 +1295,13 @@
 === From IEEE Xplore ===
 @inproceedings{plaku2010motionsymbolic,
    author = {Plaku, E. and Hager, G.D.},
-   booktitle = {Robotics and Automation (ICRA), 2010 IEEE International
-                Conference on},
+   booktitle = icra,
    title = {Sampling-based motion and symbolic action planning with
-            geometric and differential constraints}, 
-   year = {2010}, 
-   month = may, 
-   volume = {}, 
-   number = {}, 
-   pages = {5002 -5008}, 
-   doi = {10.1109/ROBOT.2010.5509563}, 
+            geometric and differential constraints},
+   year = {2010},
+   month = may,
+   pages = {5002 -5008},
+   doi = {10.1109/ROBOT.2010.5509563},
    issn = {1050-4729},
 }
 
@@ -1303,7 +1312,7 @@
    note = {AAI7001588},
    school = {Stanford University},
    address = {Stanford, CA, USA},
-} 
+}
 
 === Created manually ===
 @article{pohl1970weightedastar,
@@ -1320,12 +1329,14 @@
 
 === Created manually ===
 @inproceedings{quigley2009ros,
-   author = {Quigley, M. and Gerkey, B. and Conley K. and Faust, J. and
-      Foote, T. and Leibs, J. and Berger, E. and Wheeler, R. and Ng, A. Y.},
-    title = {ROS: an open-source Robot Operating System},
-    booktitle = {Proc. Open-Source Software workshop,
-      IEEE International Conference on Robotics and Automation, 2009. (ICRA)},
-    year = {2009},
+   author = {Quigley, M. and Gerkey, B. and Conley K. and Faust, J.
+      and Foote, T. and Leibs, J. and Berger, E. and Wheeler, R.
+      and Ng, A. Y.},
+   title = {ROS: an open-source Robot Operating System},
+   booktitle = {Proc. Open-Source Software workshop,
+      IEEE International Conference on Robotics and Automation, 2009.
+      (ICRA)},
+   year = {2009},
 }
 
 === Created manually ===
@@ -1368,10 +1379,9 @@
 @inproceedings{ratliff2009chomp,
    author = {Ratliff, Nathan and Zucker, Matt and Bagnell, J. Andrew
       and Srinivasa, Siddhartha},
-   booktitle = {Robotics and Automation, 2009. ICRA '09.
-      IEEE International Conference on},
-   title = {CHOMP: Gradient optimization techniques for efficient motion
-      planning},
+   booktitle = icra,
+   title = {CHOMP: Gradient optimization techniques for efficient
+      motion planning},
    year = {2009},
    month = may,
    pages = {489-494},
@@ -1395,7 +1405,7 @@
 }
 
 === From IEEE Xplore ===
-@inproceedings{reif1979moverscomplexity, 
+@inproceedings{reif1979moverscomplexity,
    author = {Reif, John H.},
    title = {Complexity of the mover's problem and generalizations},
    booktitle = {Foundations of Computer Science, 1979.,
@@ -1409,25 +1419,27 @@
 
 === From Springer website ===
 @article{rodriguez2003evalhumanrobot,
-  year = {2003},
-  issn = {0929-5593},
-  journal = {Autonomous Robots},
-  volume = {14},
-  number = {2-3},
-  doi = {10.1023/A:1022279618991},
-  title = {A New Method to Evaluate Human-Robot System Performance},
-  url = {http://dx.doi.org/10.1023/A%3A1022279618991},
-  publisher = {Kluwer Academic Publishers},
-  author = {Rodriguez, G. and Weisbin, C.R.},
-  pages = {165-178},
-  language = {English},
+   author = {Rodriguez, G. and Weisbin, C. R.},
+   title = {A New Method to Evaluate Human-Robot System Performance},
+   year = {2003},
+   journal = {Autonomous Robots},
+   issn = {0929-5593},
+   volume = {14},
+   number = {2-3},
+   doi = {10.1023/A:1022279618991},
+   url = {http://dx.doi.org/10.1023/A%3A1022279618991},
+   publisher = {Kluwer Academic Publishers},
+   pages = {165-178},
+   language = {English},
 }
 
 === From IEEE Xplore ===
 @inproceedings{rosenberg1993fixtures,
    author = {Rosenberg, L.B.},
-   booktitle = {Virtual Reality Annual International Symposium, 1993., 1993 IEEE},
-   title = {Virtual fixtures: Perceptual tools for telerobotic manipulation},
+   booktitle = {Virtual Reality Annual International Symposium, 1993.,
+      1993 IEEE},
+   title = {Virtual fixtures: Perceptual tools for telerobotic
+      manipulation},
    year = {1993},
    month = sep,
    pages = {76-82},
@@ -1455,17 +1467,16 @@
    doi = {10.1007/3-540-36460-9_27},
 }
 
-=== Created manually ===
+=== From RSS website ===
 @inproceedings{schulman2013trajopt,
+   author = {John Schulman and Jonathan Ho and Alex Lee
+      and Ibrahim Awwal and Henry Bradlow and Pieter Abbeel},
    title = {Finding Locally Optimal, Collision-Free Trajectories with
-      Sequential Convex Optimization.},
-   author = {Schulman, John and Ho, Jonathan and Lee, Alex and Awwal, Ibrahim
-      and Bradlow, Henry and Abbeel, Pieter},
-   booktitle = {Robotics: Science and Systems},
-   volume = {9},
-   number = {1},
-   pages = {1--10},
+      Sequential Convex Optimization},
+   booktitle = rss,
    year = {2013},
+   month = jun,
+   address = {Berlin, Germany},
 }
 
 === Manual ===
@@ -1481,10 +1492,10 @@
 
 === From sagepub (IJRR) ===
 @article{schwartzsharir1983piano3,
-   author = {Schwartz, Jacob T. and Sharir, Micha}, 
-   title = {On the Piano Movers' Problem: III. Coordinating the Motion of
-      Several Independent Bodies: The Special Case of Circular Bodies
-      Moving Amidst Polygonal Barriers},
+   author = {Schwartz, Jacob T. and Sharir, Micha},
+   title = {On the Piano Movers' Problem: III. Coordinating the Motion
+      of Several Independent Bodies: The Special Case of Circular
+      Bodies Moving Amidst Polygonal Barriers},
    volume = {2},
    number = {3},
    pages = {46-75},
@@ -1499,8 +1510,7 @@
 @inproceedings{shaharabani2013sparsification,
    author = {Shaharabani, D. and Salzman, O. and Agarwal, P.K.
       and Halperin, D.},
-   booktitle = {Robotics and Automation (ICRA),
-      2013 IEEE International Conference on},
+   booktitle = icra,
    title = {Sparsification of Motion-Planning Roadmaps by Edge
       Contraction},
    year = {2013},
@@ -1516,7 +1526,8 @@
    title = {Structure in communication nets},
    booktitle = {Proceedings of the Symposium on Information Networks
       (New York, 1954)},
-   publisher = {Polytechnic Press of the Polytechnic Institute of Brooklyn},
+   publisher = {Polytechnic Press of the Polytechnic Institute of
+      Brooklyn},
    address = {Brooklyn, New York, NY, USA},
    year = {1955},
    pages = {199-203},
@@ -1577,10 +1588,9 @@
 
 === From IEEE Xplore ===
 @inproceedings{srivastava2014taskmotion,
-   author = {Srivastava, Siddharth and Fang, Eugene and Riano, Lorenzo and
-      Chitnis, Rohan and Russell, Stuart and Abbeel, Pieter},
-   booktitle = {Robotics and Automation (ICRA), 2014 IEEE International
-      Conference on},
+   author = {Srivastava, Siddharth and Fang, Eugene and Riano, Lorenzo
+      and Chitnis, Rohan and Russell, Stuart and Abbeel, Pieter},
+   booktitle = icra,
    title = {Combined task and motion planning through an extensible
       planner-independent interface layer},
    year = {2014},
@@ -1591,26 +1601,28 @@
 
 === inproceedings CiteSeer ===
 @inproceedings{stentz1994dstar,
-    author = {Anthony Stentz},
-    title = {Optimal and Efficient Path Planning for Partially-Known
-       Environments},
-    booktitle = {In Proceedings of the IEEE International Conference
-       on Robotics and Automation},
-    year = {1994},
-    pages = {3310--3317},
+   author = {Anthony Stentz},
+   title = {Optimal and Efficient Path Planning for Partially-Known
+      Environments},
+   booktitle = {In Proceedings of the IEEE International Conference
+      on Robotics and Automation},
+   year = {1994},
+   pages = {3310--3317},
 }
 
 === Created manually ===
 @article{stentz2014chimp,
-   author = {Stentz, Tony and Herman, Herman and Kelly, Alonzo and
-      Meyhofer, Eric and Haynes, G. Clark and Stager, David and Zajac, Brian
-      and Bagnell, J. Andrew and Brindza, Jordan and Dellin, Christopher and
-      George, Michael and Gonzalez-Mora, Jose and Hyde, Sean and
-      Jones, Morgan and Laverne, Michel and Likhachev, Maxim and Lister, Levi
-      and Powers, Matt and Ramos, Oscar and Ray, Justin and Rice, David and
-      Scheifflee, Justin and Sidki, Raumi and Srinivasa, Siddhartha and
-      Strabala, Kyle and Tardif, Jean-Philippe and Valois, Jean-Sebastien
-      and Vande Weghe, J. Michael and Wagner, Michael and Wellington, Carl},
+   author = {Stentz, Tony and Herman, Herman and Kelly, Alonzo
+      and Meyhofer, Eric and Haynes, G. Clark and Stager, David
+      and Zajac, Brian and Bagnell, J. Andrew and Brindza, Jordan
+      and Dellin, Christopher and George, Michael
+      and Gonzalez-Mora, Jose and Hyde, Sean and Jones, Morgan
+      and Laverne, Michel and Likhachev, Maxim and Lister, Levi
+      and Powers, Matt and Ramos, Oscar and Ray, Justin and Rice, David
+      and Scheifflee, Justin and Sidki, Raumi and Srinivasa, Siddhartha
+      and Strabala, Kyle and Tardif, Jean-Philippe
+      and Valois, Jean-Sebastien and Vande Weghe, J. Michael
+      and Wagner, Michael and Wellington, Carl},
    title = {{CHIMP}, the {CMU Highly Intelligent Mobile Platform}},
    year = {2014},
    journal = {Submitted},
@@ -1620,15 +1632,15 @@
 
 === From IEEE Xplore ===
 @inproceedings{stilman2004namo,
-   author = {Stilman, M. and Kuffner, J.}, 
+   author = {Stilman, M. and Kuffner, J.},
    title = {Navigation among movable obstacles: real-time reasoning in
             complex environments},
-   booktitle = {Humanoid Robots, 2004 4th IEEE/RAS International Conference on},
-   year = {2004}, 
-   month = nov, 
-   volume = {1}, 
-   number = {}, 
-   pages = {322-341}, 
+   booktitle = {Humanoid Robots, 2004 4th IEEE/RAS International
+      Conference on},
+   year = {2004},
+   month = nov,
+   volume = {1},
+   pages = {322-341},
    doi = {10.1109/ICHR.2004.1442130},
 }
 
@@ -1656,7 +1668,8 @@
    isbn = {978-3-540-62709-8},
    volume = {1211},
    series = {Lecture Notes in Computer Science},
-   editor = {Keravnou, Elpida and Garbay, Catherine and Baud, Robert and Wyatt, Jeremy},
+   editor = {Keravnou, Elpida and Garbay, Catherine and Baud, Robert
+      and Wyatt, Jeremy},
    doi = {10.1007/BFb0029430},
    url = {http://dx.doi.org/10.1007/BFb0029430},
    publisher = {Springer Berlin Heidelberg},
@@ -1665,16 +1678,17 @@
 
 === From Springer website ===
 @incollection{trevelyan2008hazardous,
-  year = {2008},
-  isbn = {978-3-540-23957-4},
-  booktitle = {Springer Handbook of Robotics},
-  editor = {Siciliano, Bruno and Khatib, Oussama},
-  doi = {10.1007/978-3-540-30301-5_49},
-  title = {Robotics in Hazardous Applications},
-  url = {http://dx.doi.org/10.1007/978-3-540-30301-5_49},
-  publisher = {Springer Berlin Heidelberg},
-  author = {Trevelyan, JamesP. and Kang, Sung-Chul and Hamel, WilliamR.},
-  pages = {1101-1126},
+   author = {Trevelyan, JamesP. and Kang, Sung-Chul
+      and Hamel, William R.},
+   title = {Robotics in Hazardous Applications},
+   year = {2008},
+   isbn = {978-3-540-23957-4},
+   booktitle = {Springer Handbook of Robotics},
+   editor = {Siciliano, Bruno and Khatib, Oussama},
+   doi = {10.1007/978-3-540-30301-5_49},
+   url = {http://dx.doi.org/10.1007/978-3-540-30301-5_49},
+   publisher = {Springer Berlin Heidelberg},
+   pages = {1101-1126},
 }
 
 === Manual ===
@@ -1688,12 +1702,12 @@
 
 === Manual, from http://smartech.gatech.edu ===
 @inproceedings{vandenberg2008moveable,
-   author = {Jur van den Berg and Mike Stilman and James Kuffner and Ming Lin
-             and Dinesh Manocha},
+   author = {Jur van den Berg and Mike Stilman and James Kuffner
+      and Ming Lin and Dinesh Manocha},
    title = {Path planning among movable obstacles: a probabilistically
-            complete approach},
+      complete approach},
    booktitle = {Proceedings, Workshop on the Algorithmic Foundations of
-                Robotics (WAFR '08)},
+      Robotics (WAFR '08)},
    year = {2008},
 }
 
@@ -1709,8 +1723,7 @@
 @inproceedings{xia2013fixtures,
    author = {Tian Xia and Leonard, S. and Kandaswamy, I. and Blank, A.
       and Whitcomb, L.L. and Kazanzides, P.},
-   booktitle = {Robotics and Automation (ICRA), 2013 IEEE International
-      Conference on},
+   booktitle = icra,
    title = {Model-based telerobotic control with virtual fixtures for
       satellite servicing tasks},
    year = {2013},
@@ -1745,9 +1758,11 @@
 
 === Manual ===
 @article{zucker2013chomp,
-   title = {{CHOMP}: Covariant Hamiltonian Optimization for Motion Planning},
-   author = {Zucker, M. and Ratliff, R. and Dragan, A.D. and Pivtoraiko, M.
-      and Klingensmith, M. and Dellin, C. and Bagnell, J.A. and Srinivasa, S.S.},
+   title = {{CHOMP}: Covariant Hamiltonian Optimization for Motion
+      Planning},
+   author = {Zucker, M. and Ratliff, R. and Dragan, A.D.
+      and Pivtoraiko, M. and Klingensmith, M. and Dellin, C.
+      and Bagnell, J.A. and Srinivasa, S.S.},
    journal = {The International Journal of Robotics Research},
    volume = {32},
    number = {9--10},
