add some more cites

--- a/references.bib
+++ b/references.bib
@@ -189,6 +189,14 @@
    issn = {1050-4729},
 }
 
+@unpublished{branicky2002detvsprobroadmaps,
+   author = {Michael S. Branicky and Steven M. LaValle and Kari Olson,
+      and Libo Yang},
+   title = {Deterministic vs. Probabalistic Roadmaps},
+   note = {Submitted to IEEE Trans. on Robotics and Autamation},
+   year = {2002},
+}
+
 === From sagepub (IJRR) ===
 @article{cambon2009hybrid,
    author = {Cambon, St\'{e}phane and Alami, Racid and Gravot, Fabien},
@@ -277,6 +285,16 @@
    publisher = {Springer Berlin Heidelberg},
    pages = {51-60},
    language = {English},
+}
+
+@techreport{dechter1984bfsastaropt,
+   author = {Rina Dechter and Judea Pearl},
+   title = {Generalized Best-First Search Strategies and the
+      Optimality of {A*}},
+   institution = {Cognitive Systems Laboratory, UCLA},
+   address = {Los Angeles, CA, USA},
+   year = {1984},
+   month = jun,
 }
 
 === From RI website ===
@@ -867,6 +885,14 @@
    title = {Lifelong Planning {A}*},
    journal = {Artificial Intelligence Journal},
    year = {2004},
+}
+
+=== Manual ===
+@inproceedings{koenig2002dstarlite,
+   author = {Sven Koenig and Maxim Likhachev},
+   title = {{D* Lite}},
+   booktitle = {Proceedings of AAAI},
+   year = {2002},
 }
 
 === From citeseer ===
