--- a/thesis.tex
+++ b/thesis.tex
@@ -2015,6 +2015,8 @@ the waste graph.
 As a potential function.
 Also Goldberg \citep{goldberg2005spexternalmemory}.
 
+To integrate: \citep{dechter1984bfsastaropt}.
+
 \subsection{Incremental Search}
 
 This stuff is more modern (1996, 2004).
