add first-draft non-incremental dimacs figures

--- a/references.bib
+++ b/references.bib
@@ -1335,6 +1335,7 @@
    author = {Ira Sheldon Pohl},
    title = {Bi-directional and Heuristic Search in Path Problems},
    year = {1969},
+   month = may,
    note = {AAI7001588},
    school = {Stanford University},
    address = {Stanford, CA, USA},
