rework makefile with automatic deps

--- a/proposal.tex
+++ b/proposal.tex
@@ -187,9 +187,9 @@ We also provide open-source implementations of our algorithms.
 
 \tableofcontents
 
-\include{ch01-intro}
-\include{chxx-proposed-framework}
-\include{ch11-proposed}
+\include{proposal-intro}
+\include{proposal-framework}
+\include{proposal-summary}
 
 %{\small
 %\bibliographystyle{abbrv}
