--- a/proptalk.tex
+++ b/proptalk.tex
@@ -97,13 +97,13 @@ Reuse-Informed Optimization of Planning Effort}
 
 \begin{document}
 
-\input{proposal-talk-intro}
+\input{proptalk-intro}
 
-\input{proposal-talk-act1}
+\input{proptalk-act1}
 
-\input{proposal-talk-act2}
+\input{proptalk-act2}
 
-\input{proposal-talk-act3}
+\input{proptalk-act3}
 
 \begin{frame}[t]
    \frametitle{Summary of Proposed Work}
@@ -262,6 +262,6 @@ Reuse-Informed Optimization of Planning Effort}
 \end{frame}
 }
 
-\input{proposal-talk-backup}
+\input{proptalk-backup}
 
 \end{document}
