rename chapters so clean works

--- a/thesis.tex
+++ b/thesis.tex
@@ -246,11 +246,11 @@ Outline of contributions:
 \item Planning with C-Space Families (Chapter~\ref{chap:family})
 \end{itemize}
 
-%\include{ch02-lazysp}
+\include{thesis-ch02-lazysp}
 
-%\include{ch03-ibid}
+\include{thesis-ch03-ibid}
 
-\include{ch04-lemur}
+\include{thesis-ch04-lemur}
 
 \chapter{Application: Planning Multi-Step Manipulation Tasks}
 \label{chap:family}
